html to json done

--- a/adaptTerrariaWiki/main.html
+++ b/adaptTerrariaWiki/main.html
@@ -4,12 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vue-router/dist/vue-router.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/vuejs-paginate@2/dist/vuejs-paginate.js"></script>
+        <link rel="stylesheet" href="main.css">
+        <script src="main.js"></script>
     </head>
     <body>
         <div id="app">
@@ -19,6 +15,48 @@
                         <h1>Adapt Terraria Wiki</h1>
                         <p>Adapt Terraria Wiki is a wiki for the game Terraria. It is a fan-made wiki, and is not affiliated with Re-Logic or Terraria.</p>
                         <p>Adapt Terraria Wiki is currently in development. Please check back later.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card melee-colour middle" style="width: 18rem;">
+                            <img class="card-img-top" src="images/Solar_Flare_armor.png" alt="Card image cap">
+                            <div class="card-body">
+                            <h2 class="card-title">Melee</h2>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="detail.html/melee" class="btn btn-info">See more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card ranged-colour middle" style="width: 18rem;">
+                            <img class="card-img-top" src="images/Vortex_armor.png" alt="Card image cap">
+                            <div class="card-body">
+                            <h2 class="card-title">Ranged</h2>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="detail.html/" class="btn btn-info">See more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card mage-colour middle" style="width: 18rem;">
+                            <img class="card-img-top" src="images/Nebula_armor.png" alt="Card image cap">
+                            <div class="card-body">
+                            <h2 class="card-title">Mage</h2>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="detail.html" class="btn btn-info">See more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card sumonning-colour middle" style="width: 18rem;">
+                            <img class="card-img-top" src="images/Stardust_armor.png" alt="Card image cap">
+                            <div class="card-body">
+                            <h2 class="card-title">Summoning</h2>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="detail.html" class="btn btn-info">See more</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
